# cookiecutter-seatools-python

./: .gitignore  README.md  cookiecutter.json
docs/: Django项目指南.md  FastAPI项目指南.md  Flask项目指南.md  Redis使用指南.md  Scrapy项目指南.md  SqlAlchemy数据库使用指南.md  guide.md  常规脚本任务场景.md
{{cookiecutter.project_name}}/: .gitignore  README.md  docker-compose.yml  main.Dockerfile  noxfile.py  pyproject.toml
{{cookiecutter.project_name}}/config/: application.yml
{{cookiecutter.project_name}}/src/extensions/chrome/: chrome.py  main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/boot/: __init__.py  ioc.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/cmd/: main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/config/: __init__.py  base.py  db.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/db/: __init__.py  base.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/decorators/: db_session.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/logger/: __init__.py  logging_setup.py  loguru_setup.py  sqlalchemy_setup.py  uvicorn_setup.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/models/: config.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/utils/: __init__.py  path.py
{{cookiecutter.project_name}}/tests/: test_gen_db.py  test_main.py
